# lotofcubes

./: Cargo.toml  LICENSE  README.md  build.rs
assets/shaders/: display.frag  display.vert  main_max.frag  main_max.vert  main_no_nm.frag  main_no_nm.vert  main_utils.glsl  shadow.vert
assets/shaders/deferred_rendering/: geometry_pass.frag  geometry_pass.vert  lighting_pass.frag  lighting_pass.vert  utils.frag
src/: input.rs  main.rs  mat.rs  resources.rs  rgl.rs  util.rs
src/game/: atlas.rs  load.rs  mod.rs  traits.rs  utils.rs
src/glsl_expand/: id_based_vec.rs  marked_text.rs  mod.rs  parse_rules.rs
